--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
-name: Mineshaft Item Port
+name: MineshaftItemPort
 version: '0.1'
 main: com.mineshaft.mineshaftAHardcodedItemPort.MineshaftItemPort
 api-version: '1.20'
-prefix: [MineshaftItemPort]
+prefix: "[MineshaftItemPort]"
 authors: [Mineshaft]
 description: A port of items from the old "Another Rpg Plugin"
 website: github.com/SF-24
