--- a/pom.xml
+++ b/pom.xml
@@ -77,19 +77,30 @@
             <url>https://repo.codemc.io/repository/maven-public/</url>
             <layout>default</layout>
         </repository>
+        <repository>
+            <id>jsinco-repo</id>
+            <url>https://repo.jsinco.dev/releases</url>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
+            <artifactId>spigot</artifactId>
             <version>1.20.6-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+            <classifier>remapped-mojang</classifier>
         </dependency>
         <dependency>
             <groupId>de.tr7zw</groupId>
             <artifactId>item-nbt-api-plugin</artifactId>
             <version>2.13.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dre.brewery</groupId>
+            <artifactId>BreweryX</artifactId>
+            <version>3.4.10</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
