--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
             <groupId>de.tr7zw</groupId>
             <artifactId>item-nbt-api-plugin</artifactId>
             <version>2.13.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.dre.brewery</groupId>
