--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
                     <relocations>
                         <relocation>
                             <pattern>de.tr7zw.changeme.nbtapi</pattern>
-                            <shadedPattern>com.shaded.util.nbtapi</shadedPattern>
+                            <shadedPattern>com.mineshaft.mineshaftAHardcodedItemPort.nbtapi</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -112,8 +112,8 @@
         </dependency>
         <dependency>
             <groupId>de.tr7zw</groupId>
-            <artifactId>item-nbt-api-plugin</artifactId>
-            <version>2.13.1</version>
+            <artifactId>item-nbt-api</artifactId>
+            <version>2.15.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
